-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    5.0

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2014 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 5.0
-----------------

1/14/15
    - Added support for LP/QP solver CLP (COIN_OR Linear Programming).
      Use 'opf.dc.solver' option 'CLP' or qps_clp().
    - Added note to README and home page about OPTI Toolbox by
      Jonathan Currie being an easy way to install some good solvers
      for Windows users.

1/13/15
    - Updated t_opf_dc_ot() to remove the skipping of the checking of
      price results for the dual-simplex algorithm for all versions of
      Matlab except R2014b, the first version that included the
      dual-simplex algorthm. For some reason, in this version it did
      not return any Lagrange multipliers!?!.
    - Increment MATPOWER options version number to 5 (forgot to do it
      previously for 3, 4, and 5) and included code to update older
      options structs to current version.

1/7/15
    - Improved detection of GLPK version in mpver() and GLPK
      availability in have_fcn(), now compatible with GLPK installed
      by OPTI Toolbox (http://www.i2c2.aut.ac.nz/Wiki/OPTI/).

12/22/14
    - Fixed fatal bug in toggle_dcline() when pretty-printing results.

12/18/14
    - Fixed fatal bug in case_info() for islands with no generation.


Changes since 5.0b1
-------------------

12/17/14
    - Released version 5.0.

12/16/14
    - Added unsupported functions check_feasibility.m, checklimits.m,
      loss2bus.m,  make_opf_feasible.m, and makeBloss.m to extras/misc.
    - Added section 9 "Miscellaneous MATPOWER Functions" to User's Manual.

12/15/14
    - Added option for case_info() to print to a file. Added case_info()
      tests to t_island().

12/12/14
    - Added code in psse_read() to work around a bug in Matlab 7.3.